syntax = "proto3";

option java_package = "org.zchzh.grpc.api";
option java_outer_classname = "HelloWorld";

service Greeter {
  rpc SayHello(HelloRequest) returns(HelloReply) {}

  rpc send(stream MsgRequest) returns(stream MsgResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message MsgRequest {
  string reqId = 1;
}

message MsgResponse {
  string resId = 1;
}
